--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="close-popup js-close-campaign"></div>
 		</div>
 </div>
-	<header id="main_page">
+	<header id="main_page" class="header">
 		<div class="header_top_side">
 			<div class="container">
 				<div class="row">
@@ -129,7 +129,7 @@
 				<div class="col-lg-6 col-md-6 col-sm-12">
 						<div class="price_info">
 							<div class="price_info__inputs">
-								<input type="text" placeholder="Введите ваш e-mail">
+								<input type="text" placeholder="Ваш e-mail">
 								<i class="far fa-envelope"></i>								
 							</div>
 						</div>
@@ -137,7 +137,7 @@
 				<div class="col-lg-6 col-md-6 col-sm-12">
 					    <div class="price_info aa">
 							<div class="price_info__inputs">
-								<input type="text" placeholder="Введите ваш телефон">
+								<input type="text" placeholder="Ваш телефон">
 								<i class="fas fa-phone-alt"></i>
 							</div>
 						</div>
@@ -234,12 +234,12 @@
 			<div class="row">
 				<div class="col-lg-5 col-md-12 col-sm-12 col-12">
 					<div class="s_form s_end">
-						<input type="text" placeholder="Введите ваш артикул">
+						<input type="text" placeholder="Ваш артикул">
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-12 col-sm-12 col-12">	
 					<div class="s_form">
-						 <input type="text" placeholder="Введите ваш телефон">
+						 <input type="text" placeholder="Ваш телефон">
 					</div>
 				</div>
 				<div class="col-lg-5 col-md-12 col-sm-12 col-12">
@@ -615,7 +615,7 @@
    		<div class="row">
    			<div class="col-12 col-md-6 col-lg-6 col-sm-12 ol-xs-12">
    				<div class="consultation_form cc">
-   					<input type="text" placeholder="Введите ваш телефон">
+   					<input type="text" placeholder="Ваш телефон">
    				</div>
    			</div>
    			<div class="col-12 col-md-6 col-lg-6 col-sm-12 col-xs-12">
